Android Accessibility: fix return value for scroll actions

There is a chance that a race condition occurs where the page returns canScrollForward/backward/up/down/left/right as true but actually the page cannot scroll further.
In those cases the scroll function in browser android accessibility should return false instead of
true.

Bug: 763014
Change-Id: I777b5fb562713e0bd835a354adab9cbf86fcd853
Reviewed-on: https://chromium-review.googlesource.com/661718
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501340}
Former-commit-id: 6dd5a34b1d4fd761152d93e251546cd84730187b